--- a/malgeum_jigi_be/package.json
+++ b/malgeum_jigi_be/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "openai": "^6.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
