--- a/malgeum_jigi_fe/ios/Runner/Info.plist
+++ b/malgeum_jigi_fe/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>이 앱은 당신의 위치 정보를 사용하여 정확한 환기 점수와 생활 가이드를 제공합니다.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>이 앱은 당신의 위치 정보를 사용하여 정확한 환기 점수와 생활 가이드를 제공합니다.</string>
 </dict>
 </plist>
