--- a/malgeum_jigi_be/package.json
+++ b/malgeum_jigi_be/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "node dev-server.js",
+    "build:lambda": "esbuild index.js --bundle --platform=node --format=cjs --target=node20 --outfile=dist/index.cjs --external:aws-sdk",
+    "zip:lambda": "zip -r function.zip handler.cjs data/stations.json node_modules package.json"
   },
   "keywords": [],
   "author": "",
@@ -15,10 +17,13 @@
     "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "esm": "^3.2.25",
     "express": "^5.1.0",
-    "openai": "^6.7.0"
+    "openai": "^6.7.0",
+    "serverless-http": "^4.0.0"
   },
   "devDependencies": {
+    "esbuild": "^0.25.12",
     "nodemon": "^3.1.10"
   }
 }
