--- a/malgeum_jigi_be/package.json
+++ b/malgeum_jigi_be/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.3",
     "esm": "^3.2.25",
     "express": "^5.1.0",
+    "mongodb": "^7.0.0",
     "openai": "^6.7.0",
     "serverless-http": "^4.0.0"
   },
